--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type ="text/css" href="main.css" >
-    <link href="all.css" rel="stylesheet">
+    <link rel="stylesheet" type ="text/css" href="public/styles/main.css" >
+    <link href="public/styles/all.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
@@ -59,7 +59,7 @@
             <h3 id="projects__header">Projects</h3>
     <!-- Noods -->
             <div class="project__noods">
-                <img class="project__image" src="/public/images/Noods_Screenshot.jpg" alt="Noods Screenshot">
+                <img class="project__image" src="images/Noods_Screenshot.jpg" alt="Noods Screenshot">
                 <div class="project__info">
                     <div class="project__head">
                         <a class="project__repo" href="https://github.com/rosenbr/capstone">
