even more pic tests

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
     <!-- Wayfarer -->
             <div class="project__wayfarer">
-                <img src="/public/images/Wayfarer_Screenshot.png" alt="Wayfarer Screenshot" class="project__image">
+                <img src="/public/images/Wayfarer_Screenshot.jpg" alt="Wayfarer Screenshot" class="project__image">
                 <div class="project__info">
                     <div class="project__head">
                         <a class="project__repo" href="https://github.com/rosenbr/Project_2">
