--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Intro -->
     <section class="info">
         <div class="info__intro">
-            <h2 class="info__header info__name">Richard Rosenberg</h2>
+            <h2 class="intro__header" id="intro__name">Richard Rosenberg</h2>
             <div class="info__links">
                 <a href="https://www.linkedin.com/in/richardrosenberg88/">
                     <i class="fab fa-linkedin fa-5x" id="fa-linkedin__info"></i>
