--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <label>Your message:
                     <textarea class="contact__message" name="message"></textarea>
                 </label> </br>
-                <button type="submit" class="contact__button">Pew Pew Pew!</button></br>
+                <button type="submit" class="contact__button">Send</button></br>
             </form>
         </div>
     </div>
