--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <h3 class="info__header">About Me</h3>
                 <!-- <h5>| Ex-Bartender Turned Dev |</h5> -->
                 <!-- <p class="about__info">Hello! My name is Richard and I am an aspiring Software Engineer.</p> -->
-                <p class="about__infoP2">After working in the restaurant industry for over 10 years, I decided it was time for a change. I took the plunge into the world of tech head first by joining General Assembly and starting the Software Engineering Immersive. After 12 long weeks of sleepless nights, insane stress, and thoughts of quiting and returning to bartending, I made it through! It was by far one of the most challenging experiences of my life, that was only made more difficult as I had no background in any tech aside from using Point Of Sale terminals while bartending. I didn't even have a working laptop/desktop for those 10 years!</p>
-                <p class="info__aboutP3">Being able to adapt to new experiences and situations was immensely helpful on my journey to not only becoming a dev, but on the journey of life as well. When the pandemic hit, I took it as an opportunity to learn something new and adapt to the changing world.</p>
+                <p class="about__infoP2">I am a software engineer with a background in hospitality and customer service. On top of my strong problem-solving skills, hearing what the client wants and delivering has always been a top priority for me. Adaptability, perseverance, and strong organizational skills make me a valuable team member in any situation. </p>
+                <!-- <p class="info__aboutP3">Being able to adapt to new experiences and situations was immensely helpful on my journey to not only becoming a dev, but on the journey of life as well. When the pandemic hit, I took it as an opportunity to learn something new and adapt to the changing world.</p> -->
             <!-- <div class="about__stacks">
                 <h5>Tech Stacks</h5>
                 <ul class="about__list">
