--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- Intro -->
     <section class="info">
         <div class="info__intro">
+            <img src="public/images/profile_pic.jpg" alt="Richard Rosenberg">
             <h2 class="intro__header" id="intro__name">Richard Rosenberg</h2>
             <div class="info__links">
                 <a href="https://www.linkedin.com/in/richardrosenberg88/">
@@ -53,7 +54,7 @@
             </div> -->
         </div>
     </section>
-    <!-- Projects -->
+    <!-- Projects -->  
     <section class="projects">
         <div class="project">
             <h3 id="projects__header">Projects</h3>
