email button updated

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script defer src="public/scripts/all.js"></script>
     <title>Richard Rosenberg</title>
 </head>
@@ -35,23 +36,23 @@
                 <!-- <p class="about__info">Hello! My name is Richard and I am an aspiring Software Engineer.</p> -->
                 <p class="about__infoP2">I am a software engineer with a background in hospitality and customer service. On top of my strong problem-solving skills, hearing what the client wants and delivering has always been a top priority for me. Adaptability, perseverance, and strong organizational skills make me a valuable team member in any situation. </p>
                 <!-- <p class="info__aboutP3">Being able to adapt to new experiences and situations was immensely helpful on my journey to not only becoming a dev, but on the journey of life as well. When the pandemic hit, I took it as an opportunity to learn something new and adapt to the changing world.</p> -->
-            <!-- <div class="about__stacks">
-                <h5>Tech Stacks</h5>
+            <div class="about__skills">
+                <h5>Skills</h5>
                 <ul class="about__list">
                     <li class="list__first_half">JavaScript</li>
-                    <li class="list__first_half">Python</li>
-                    <li class="list__first_half">React</li>
-                    <li class="list__first_half">JQuery</li>
+                    <!-- <li class="list__first_half">Python</li> -->
+                    <!-- <li class="list__first_half">React</li> -->
+                    <!-- <li class="list__first_half">JQuery</li> -->
                     <li class="list__first_half">Mongoose</li>
                     <li class="list__first_half">Node</li>
                     <li class="list__second_half">HTML</li>
                     <li class="list__second_half">CSS</li>
-                    <li class="list__second_half">Django</li>
+                    <!-- <li class="list__second_half">Django</li> -->
                     <li class="list__second_half">Express</li>
-                    <li class="list__second_half">Postgres</li>
-                    <li class="list__second_half">GitHub</li>
+                    <!-- <li class="list__second_half">Postgres</li> -->
+                    <!-- <li class="list__second_half">GitHub</li> -->
                 </ul>
-            </div> -->
+            </div>
         </div>
     </section>
     <!-- Projects -->  
@@ -116,7 +117,9 @@
                 <label>Your message:
                     <textarea class="contact__message" name="message"></textarea>
                 </label> </br>
-                <button type="submit" class="contact__button">Send</button></br>
+                <button type="submit" class="contact__button">
+                    <i class="far fa-envelope fa-2x contact__button"></i>
+                </button></br>
             </form>
         </div>
     </div>
