prep for skills section

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
                 <!-- <p class="about__info">Hello! My name is Richard and I am an aspiring Software Engineer.</p> -->
                 <p class="about__infoP2">I am a software engineer with a background in hospitality and customer service. On top of my strong problem-solving skills, hearing what the client wants and delivering has always been a top priority for me. Adaptability, perseverance, and strong organizational skills make me a valuable team member in any situation. </p>
                 <!-- <p class="info__aboutP3">Being able to adapt to new experiences and situations was immensely helpful on my journey to not only becoming a dev, but on the journey of life as well. When the pandemic hit, I took it as an opportunity to learn something new and adapt to the changing world.</p> -->
-            <div class="about__skills">
+            <!-- <div class="about__skills">
                 <h5>Skills</h5>
                 <ul class="about__list">
-                    <li class="list__first_half">JavaScript</li>
+                    <li class="list__first_half">JavaScript</li> use me -->
+                    <!-- <li class="list__second_half">HTML</li> use me -->
+                    <!-- <li class="list__second_half">CSS</li> use me-->
+                    <!-- <li class="list__first_half">Mongoose</li> use me -->
+                    <!-- <li class="list__second_half">Express</li> use me-->
+                    <!-- <li class="list__first_half">Node</li> use me -->
                     <!-- <li class="list__first_half">Python</li> -->
                     <!-- <li class="list__first_half">React</li> -->
                     <!-- <li class="list__first_half">JQuery</li> -->
-                    <li class="list__first_half">Mongoose</li>
-                    <li class="list__first_half">Node</li>
-                    <li class="list__second_half">HTML</li>
-                    <li class="list__second_half">CSS</li>
                     <!-- <li class="list__second_half">Django</li> -->
-                    <li class="list__second_half">Express</li>
                     <!-- <li class="list__second_half">Postgres</li> -->
                     <!-- <li class="list__second_half">GitHub</li> -->
                 </ul>
