--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Intro -->
     <section class="info">
         <div class="info__intro">
-            <img src="public/images/profile_pic.jpg" alt="Richard Rosenberg">
+            <img class="info__pic"" src="public/images/profile_pic.jpg" alt="Richard Rosenberg">
             <h2 class="intro__header" id="intro__name">Richard Rosenberg</h2>
             <div class="info__links">
                 <a href="https://www.linkedin.com/in/richardrosenberg88/">
@@ -32,28 +32,16 @@
     <!-- About Me -->
         <div class="info__about">
                 <h3 class="info__header">About Me</h3>
-                <!-- <h5>| Ex-Bartender Turned Dev |</h5> -->
-                <!-- <p class="about__info">Hello! My name is Richard and I am an aspiring Software Engineer.</p> -->
                 <p class="about__infoP2">I am a software engineer with a background in hospitality and customer service. On top of my strong problem-solving skills, hearing what the client wants and delivering has always been a top priority for me. Adaptability, perseverance, and strong organizational skills make me a valuable team member in any situation. </p>
-                <!-- <p class="info__aboutP3">Being able to adapt to new experiences and situations was immensely helpful on my journey to not only becoming a dev, but on the journey of life as well. When the pandemic hit, I took it as an opportunity to learn something new and adapt to the changing world.</p> -->
-            <!-- <div class="about__skills">
-                <h5>Skills</h5>
-                <ul class="about__list">
-                    <li class="list__first_half">JavaScript</li> use me -->
-                    <!-- <li class="list__second_half">HTML</li> use me -->
-                    <!-- <li class="list__second_half">CSS</li> use me-->
-                    <!-- <li class="list__first_half">Mongoose</li> use me -->
-                    <!-- <li class="list__second_half">Express</li> use me-->
-                    <!-- <li class="list__first_half">Node</li> use me -->
-                    <!-- <li class="list__first_half">Python</li> -->
-                    <!-- <li class="list__first_half">React</li> -->
-                    <!-- <li class="list__first_half">JQuery</li> -->
-                    <!-- <li class="list__second_half">Django</li> -->
-                    <!-- <li class="list__second_half">Postgres</li> -->
-                    <!-- <li class="list__second_half">GitHub</li> -->
-                </ul>
             </div>
-        </div>
+            <!-- <div class="about__skills"> -->
+                <!-- <h5>Skills</h5> -->
+                <!-- <i class="fab fa-js-square"></i> -->
+                <!-- <i class="fab fa-html5"></i> -->
+                <!-- <i class="fab fa-css3-alt"></i> -->
+                <!-- <i class="fab fa-node-js"></i> -->
+                <!-- <i class="fab fa-python"></i> -->
+            <!-- </div> -->
     </section>
     <!-- Projects -->  
     <section class="projects">
