--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         </a>
                         <h4 class="project__title">Pachy-gotchi</h4>
                     </div>
-                    <p class="project__description">Pachy-gotchi is a twist on the classic Tomagotchi toy. This was my first time creating an app that had any kind of functionality. It is very basic and visually not the most appealing, but a few weeks before creating it I could barely write a "for loop." It will always hold a special place in my heart as my first real creation! The inspiration for using a pachycephalosaurus came from the feeling of banging my head against a wall while learning the basics of JavaScript.</br></br>This app has been released with no plans of further updates. You can play the latest version <a class="project__link" id="pachy__link" href="">HERE</a>.</p>
+                    <p class="project__description">Pachy-gotchi is a twist on the classic Tomagotchi toy. This was my first time creating an app that had any kind of functionality. It is very basic and visually not the most appealing, but a few weeks before creating it I could barely write a "for loop." It will always hold a special place in my heart as my first real creation! The inspiration for using a pachycephalosaurus came from the feeling of banging my head against a wall while learning the basics of JavaScript.</br></br></p>
                 </div>
                 <img src="public/images/Pachy_Screenshot.png" alt="Pachy-Gotchi Screenshot" class="project__image" />
             </div>
