--- a/index.html
+++ b/index.html
@@ -34,15 +34,17 @@
                 <h3 class="info__header">About Me</h3>
                 <p class="about__infoP2">I am a software engineer with a background in hospitality and customer service. On top of my strong problem-solving skills, hearing what the client wants and delivering has always been a top priority for me. Adaptability, perseverance, and strong organizational skills make me a valuable team member in any situation. </p>
             </div>
-            <!-- <div class="about__skills"> -->
-                <!-- <h5>Skills</h5> -->
-                <!-- <i class="fab fa-js-square"></i> -->
-                <!-- <i class="fab fa-html5"></i> -->
-                <!-- <i class="fab fa-css3-alt"></i> -->
-                <!-- <i class="fab fa-node-js"></i> -->
-                <!-- <i class="fab fa-python"></i> -->
-            <!-- </div> -->
-    </section>
+        </section>
+        <div class="about__skills">
+            <h3 class="about__header" >Skills</h5>
+            <div class="about__icons">
+                <i class="fab fa-js-square fa-5x"></i>
+                <i class="fab fa-html5 fa-5x"></i>
+                <i class="fab fa-css3-alt fa-5x"></i>
+                <i class="fab fa-node-js fa-5x"></i>
+                <i class="fab fa-python fa-5x"></i>
+            </div>
+        </div>
     <!-- Projects -->  
     <section class="projects">
         <div class="project">
