updated about me blurb

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- About Me -->
         <div class="info__about">
                 <h3 class="info__header">About Me</h3>
-                <p class="about__infoP2">I am a software engineer with a background in hospitality and customer service. On top of my strong problem-solving skills, hearing what the client wants and delivering has always been a top priority for me. Adaptability, perseverance, and strong organizational skills make me a valuable team member in any situation. </p>
+                <p class="about__infoP2">Aspiring Software Engineer with over a decade of previous experience in customer service. My former background has taught me excellent problem solving skills, the ability to think on my feet and the value of delivering excellent service to internal and external stakeholders. I have recently graduated from General Assembly's software engineering bootcamp and am eager to transition my career into the world of software development. As a team member I bring adaptability, perseverance and strong organizational skills along with strong foundational knowledge in Python, Django, JavaScript, Express.js, and MongoDB. Reach out to me about engineering opportunities, AI, and anything video game related! </p>
             </div>
         </section>
         <div class="about__skills">
