Calc project added

--- a/index.html
+++ b/index.html
@@ -88,12 +88,19 @@
                     <p class="project__description">Wayfarer is an app for users to create posts about cities they have visited, specifically for some summer time fun. The focus of this project was two fold. First to work with and meet client expectations. Secondly, to work in a team and divide tasks and collaborate with my team members (<a class="project__link" href="https://www.linkedin.com/in/keithlbaskervillejr/">Keith (Ohz) Baskerville</a>, <a class="project__link" href="https://www.linkedin.com/in/joshua-daos/">Joshua Daos</a>, and <a class="project__link" href="https://www.linkedin.com/in/kimo-kendrick/">Kimo Kendrick</a>). This project was divided into Sprints that we had to meet the requirements of before being approved to move onto the next one.</br></br>This app has been deployed with no plans for future updates. You can check out the latest version <a class="project__link" href="https://project2-wayfarer.herokuapp.com/">HERE</a>.</p>
                 </div>
             </div>
-    <!-- Chefly? -->
-            <!-- <div class="project__chefly">
-                <h4>Chefly</h4>
-                <p>Chefly is a recipe blog site built by <a href="">Robin Weitzman</a> and myself. The goal of the project was to reverse-engineer full CRUD functionality from an already existing website. We chose <a href="https://www.yummly.com/">Yummly</a> because we both come from food service backgrounds. This was also the first time working with some within the same repo and different branches on a project. I had a lot of fun with this and Robin was a blast to work with!</br></br>This app has not been released and we do not have plans on future updates. You can check out the repo <a href="https://git.generalassemb.ly/robinweitz/Chefly-Project1">HERE</a>.</p>
-            </div> -->
-        <!-- <a href="https://www.linkedin.com/in/robinweitzman1/">Robin Weitzman</a> -->
+    <!-- Calculator -->
+            <div class="project__calc">
+                <div class="project__info">
+                    <div id="calc__head">
+                        <a href="https://github.com/rosenbr/sprint__calc" class="project__repo">
+                            <i class="fab fa-github-square fa-5x"></i>
+                        </a>
+                        <h4 class="project__title">Calculator</h4>
+                    </div>
+                    <p class="project__description">The Calculator app is a simple calculator I built using HTML, CSS, and JavaScript and deployed using GitHub Pages. It was built as a part of General Assembly’s “Sprint Week.” Which is a way to get another project under my belt. It is fully functional and mobile responsive.</br></br>The calculator is deployed <a href="https://rosenbr.github.io/sprint__calc/" class="porject__link">HERE</a></p>
+                </div>
+                <img src="public/images/Calculator_Screenshot.png" alt="Calculator Screenshot" class="project__image">
+            </div>
         </div>
     </section>
     <!-- Contact Info/Call-To-Action -->
