--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         </a>
                         <h4 class="project__title">Calculator</h4>
                     </div>
-                    <p class="project__description">The Calculator app is a simple calculator I built using HTML, CSS, and JavaScript and deployed using GitHub Pages. It was built as a part of General Assembly’s “Sprint Week.” Which is a way to get another project under my belt. It is fully functional and mobile responsive.</br></br>The calculator is deployed <a href="https://rosenbr.github.io/sprint__calc/" class="porject__link">HERE</a></p>
+                    <p class="project__description">The Calculator app is a simple calculator I built using HTML, CSS, and JavaScript and deployed using GitHub Pages. It was built as a part of General Assembly’s “Sprint Week.” Which is a way to get another project under my belt. It is fully functional and mobile responsive.</br></br>The calculator is deployed <a href="https://rosenbr.github.io/sprint__calc/" class="porject__link">HERE.</a></p>
                 </div>
                 <img src="public/images/Calculator_Screenshot.png" alt="Calculator Screenshot" class="project__image">
             </div>
